# DMX485

./: .gitignore  CMakeLists.txt  FTDI LICENSE.txt  README.md  dm2xx.cpp  dm2xx.h  dmx485.cpp  dmx485.m  maxmspsdk.xcconfig
DMX485.xcodeproj/: project.pbxproj
DMX485.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
DMX485.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
DMX485.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: max-external.xcscheme
FTDI/: WinTypes.h  ftd2xx-bkup.h  ftd2xx.h
cmake/: FindLibUSB.cmake  build_usblib.sh
d2xx/: dm2xx.cpp  dm2xx.h  dm2xx.m
dmx485.xcodeproj/: project.pbxproj
dmx485.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
dmx485.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: max-external.xcscheme
dmx485t.xcodeproj/: project.pbxproj
dmx485t.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
dmx485t.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
dmx485t.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: max-external.xcscheme
help/: dmx485.maxhelp
libftdi/: CMakeLists.txt
libusb/: Makefile  Makefile.in  config.h  config.status  configure  libtool  libusb-1.0.pc
libusb/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
libusb/doc/: Makefile  Makefile.in
libusb/examples/: Makefile  Makefile.in
libusb/libusb/: Makefile  Makefile.in  libusb-1.0.la  libusb_1_0_la-core.lo  libusb_1_0_la-descriptor.lo  libusb_1_0_la-hotplug.lo  libusb_1_0_la-io.lo  libusb_1_0_la-strerror.lo  libusb_1_0_la-sync.lo
libusb/libusb/.deps/: libusb_1_0_la-core.Plo  libusb_1_0_la-descriptor.Plo  libusb_1_0_la-hotplug.Plo  libusb_1_0_la-io.Plo  libusb_1_0_la-strerror.Plo  libusb_1_0_la-sync.Plo
libusb/libusb/.libs/: libusb-1.0.0.dylib  libusb-1.0.lai
libusb/libusb/os/: libusb_1_0_la-darwin_usb.lo  libusb_1_0_la-poll_posix.lo  libusb_1_0_la-threads_posix.lo
libusb/libusb/os/.deps/: libusb_1_0_la-darwin_usb.Plo  libusb_1_0_la-poll_posix.Plo  libusb_1_0_la-threads_posix.Plo
libusb/tests/: Makefile  Makefile.in
pd_headers/: m_pd.h
src/: DMXObjectCore.cpp  DMXObjectCore.h  compatibility.h  dmx485.cpp  dmx485.cpp.autosave  dmx485_pd.cpp  dmxObject.h  dmxObjectD2xx.cpp  dmxObject_pd.h  log.h  versionString.h
xcode/: maxmspsdk.xcconfig
xcode/dmx485.xcodeproj/: project.pbxproj
xcode/dmx485.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/dmx485.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/dmx485.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: max-external.xcscheme
